fix: fix the image visibility across all devices

--- a/style.css
+++ b/style.css
@@ -500,6 +500,19 @@ footer .footer-div p {
     .search {
         max-width: 100%; 
     }
+   
+    .img-unsplash {
+        position: relative;
+        top: auto;
+        right: auto;
+        margin-bottom: 1rem; 
+        align-self: center;
+    }
+
+    .img-unsplash img {
+        width: 60px; 
+        height: 60px;
+    }
     
     .weather-data {
         flex-direction: column;
@@ -567,3 +580,4 @@ footer .footer-div p {
         justify-content: center;
     }
 }
+
